# assigment-HardQode

./: .gitignore  Dockerfile  Makefile  README.md  SOLUTION.md  db.sqlite3  db_fake_data.sql  pyproject.toml  setup.cfg
LMS/: settings.py  urls.py
LMS/products/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
LMS/products/migrations/: 0001_initial.py  0002_alter_products_description.py  0003_alter_productslessons_product.py  0004_lessonsreviews_poduct_members_id.py
LMS/users/: admin.py  apps.py  models.py
LMS/users/migrations/: 0001_initial.py
