[tool.poetry]
name = "assigment-hardqode"
version = "0.1.0"
description = ""
authors = ["Dmitry Gorokhov <gorokhov86@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.5"
make = "^0.1.6.post2"
djangorestframework = "^3.14.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
django-seed = "^0.3.1"
psycopg2-binary = "^2.9.7"
django-extensions = "^3.2.3"
ipython = "^8.15.0"
django-debug-toolbar = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
